Fix: Vite toegevoegd aan package.json

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "dependencies": {
     "firebase": "^12.7.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^5.1.2",
+    "vite": "^7.3.1"
   }
 }
